[package]
name = "json-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
csv = "1.2.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokenizers = "0.13.3"
